Add Landon to About

--- a/platform/servers/web/assets/css/styles.css
+++ b/platform/servers/web/assets/css/styles.css
@@ -1290,8 +1290,8 @@ background:url(http://static.stamped.com/assets/img/stamp-travis.png) left top n
 background:url(http://static.stamped.com/assets/img/stamp-bons.png) left top no-repeat;
 }
 
-.person.jake{
-background:url(http://static.stamped.com/assets/img/stamp-jake.png) left top no-repeat;
+.person.landon{
+background:url(http://static.stamped.com/assets/img/stamp-landon.png) left top no-repeat;
 }
 
 .team .person .name{
