--- a/platform/servers/web/templates/about.html
+++ b/platform/servers/web/templates/about.html
@@ -127,16 +127,15 @@
                         </li>
                         <li>
                             <div class="thumb">
-                                <img src="http://static.stamped.com/assets/img/headshot-jake.png"/>
+                                <img src="http://static.stamped.com/assets/img/headshot-landon.jpg"/>
                             </div>
                             <div class="copy">
-                                <div class="person jake">
-                                    <span class="name">Jake Zien</span>
-                                    <span class="title">Product Designer</span>
+                                <div class="person landon" style="background: url(http://static.stamped.com/assets/img/stamp-landon.png) left top no-repeat">
+                                    <span class="name">Landon Judkins</span>
+                                    <span class="title">Software Engineer</span>
                                 </div>
                                 <div class="history">
-                                    <p>Jake graduated from Rhode Island School of Design and completed a minor in Computer Science at Brown. You can find a big portrait of him at Bed, Bath &amp; Beyond, featuring the <a href="http://www.quirky.com/products/44-product-0044?r=3bef260716ecfa5e89ec186c322f5476">power strip he invented</a>. Besides that, this is his first job.</p>
-                                    <a class="follow" href="http://twitter.com/hova414">Follow @hova414</a>
+                                    <p>Landon previously built software for a Fortune 500 manufacturing company. He also designs programming languages in his spare time. He graduated from Brown with an A.B. in Computer Science and is the best disc golf player on the Stamped team.</p>
                                 </div>
                             </div>
                         </li>
