Add "Made in NY" to footer

--- a/platform/servers/web/assets/css/styles.css
+++ b/platform/servers/web/assets/css/styles.css
@@ -875,6 +875,12 @@ margin-right:15px;
 float:right;
 }
 
+#home.public .more .copyright a{
+color:#999;
+font-weight:normal;
+margin-right:10px;
+}
+
 #home.wrap{
 position:relative;
 }
