--- a/platform/servers/web/templates/index.html
+++ b/platform/servers/web/templates/index.html
@@ -111,7 +111,10 @@
                     <a href="http://blog.stamped.com">Blog</a>
                     <a href="/terms-of-service">Terms of Service</a>
                     <a href="/privacy">Privacy Policy</a>
-                    <span class="copyright">&copy;2012 Stamped, Inc.</span>
+                    <span class="copyright">
+                        <a href="http://nytm.org/made/" class="made">Made in NY</a> 
+                        &copy;2012 Stamped, Inc.
+                    </span>
                 </div> 
         </div> <!-- /home -->
         <script type="text/javascript">
