--- a/platform/servers/web/templates/sdetail.html
+++ b/platform/servers/web/templates/sdetail.html
@@ -502,7 +502,10 @@
                 {% endif %}
                 
                 <div class="more">
-                    <span>&copy;2012 Stamped, Inc.</span>
+                    <span class="copyright">
+                        <a href="http://nytm.org/made/" class="made">Made in NY</a> 
+                        &copy;2012 Stamped, Inc.
+                    </span>
                 </div> 
             </div> <!-- /wrap --> 
             
