--- a/platform/servers/web/templates/notifications.html
+++ b/platform/servers/web/templates/notifications.html
@@ -146,7 +146,10 @@
                 <a href="http://blog.stamped.com">Blog</a>
                 <a href="/terms-of-service">Terms of Service</a>
                 <a href="/privacy">Privacy Policy</a>
-                <span class="copyright">&copy;2012 Stamped, Inc.</span>
+                <span class="copyright">
+                    <a href="http://nytm.org/made/" class="made">Made in NY</a> 
+                    &copy;2012 Stamped, Inc.
+                </span>
             </div> 
             </div>
         </div> <!-- /page -->
