--- a/platform/servers/web/templates/about.html
+++ b/platform/servers/web/templates/about.html
@@ -135,7 +135,8 @@
                                     <span class="title">Software Engineer</span>
                                 </div>
                                 <div class="history">
-                                    <p>Landon previously built software for a Fortune 500 manufacturing company. He also designs programming languages in his spare time. He graduated from Brown with an A.B. in Computer Science and is the best disc golf player on the Stamped team.</p>
+                                    <p>Landon previously built software for a large European manufacturing company. He also designs programming languages in his spare time. He graduated from Brown with an A.B. in Computer Science and is the best disc golf player on the Stamped team.</p>
+                                    <a class="follow" href="http://twitter.com/landonjudkins">Follow @landonjudkins</a>
                                 </div>
                             </div>
                         </li>
