--- a/clients/ios/Stamped/STMapViewController.xib
+++ b/clients/ios/Stamped/STMapViewController.xib
@@ -57,7 +57,7 @@
 						<string key="NSFrame">{{0, 44}, {320, 372}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="141830195"/>
+						<reference key="NSNextKeyView" ref="320509962"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -66,15 +66,15 @@
 						<float key="IBUIAlpha">0.0</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<object class="IBUIView" id="141830195">
+					<object class="IBUIView" id="320509962">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">268</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUISlider" id="602821053">
-								<reference key="NSNextResponder" ref="141830195"/>
+							<object class="IBUISlider" id="648053796">
+								<reference key="NSNextResponder" ref="320509962"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{59, 14}, {202, 23}}</string>
-								<reference key="NSSuperview" ref="141830195"/>
+								<reference key="NSSuperview" ref="320509962"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -83,12 +83,13 @@
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<float key="IBUIValue">0.25</float>
+								<bool key="IBUIContinuous">NO</bool>
 							</object>
 						</array>
 						<string key="NSFrame">{{0, 367}, {320, 49}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="602821053"/>
+						<reference key="NSNextKeyView" ref="648053796"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -327,7 +328,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">scopeSlider</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="602821053"/>
+						<reference key="destination" ref="648053796"/>
 					</object>
 					<int key="connectionID">25</int>
 				</object>
@@ -381,7 +382,7 @@
 							<reference ref="552814992"/>
 							<reference ref="388427412"/>
 							<reference ref="287395347"/>
-							<reference ref="141830195"/>
+							<reference ref="320509962"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -444,17 +445,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">23</int>
-						<reference key="object" ref="141830195"/>
+						<reference key="object" ref="320509962"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="602821053"/>
+							<reference ref="648053796"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Toolbar</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">24</int>
-						<reference key="object" ref="602821053"/>
-						<reference key="parent" ref="141830195"/>
+						<reference key="object" ref="648053796"/>
+						<reference key="parent" ref="320509962"/>
 						<string key="objectName">Scope Slider</string>
 					</object>
 				</array>
@@ -470,6 +471,7 @@
 				<string key="19.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="23.CustomClassName">STToolbar</string>
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="24.CustomClassName">STScopeSlider</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -541,6 +543,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/STMapViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">STScopeSlider</string>
+					<string key="superclassName">UISlider</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/STScopeSlider.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
