Update copyright year. Big change, I know.

--- a/platform/servers/httpapi/templates/password-reset.html
+++ b/platform/servers/httpapi/templates/password-reset.html
@@ -155,7 +155,7 @@
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="more">
-                    &copy;2011 Stamped Inc.
+                    &copy;2012 Stamped, Inc.
                 </div> 
             
         </div> <!-- /home -->
