--- a/platform/servers/httpapi/templates/404.html
+++ b/platform/servers/httpapi/templates/404.html
@@ -40,7 +40,7 @@
                     <div class="bottom-wave"></div>
                 </div>
                 <div class="more">
-                    &copy;2011 Stamped Inc.
+                    &copy;2012 Stamped, Inc.
                 </div> 
             
         </div> <!-- /home -->
